Add some new Mappers due to changes on DTO's